# most_commented_embedded_cmakelists

./: .gitignore  .mxproject  CMakeLists.txt  Makefile  README.md  arm-none-eabi-gcc.cmake  linker.ld.in  most_commented_embedded_cmakelists.ioc  shell.nix  startup_stm32f103xb.S
.github/workflows/: cmake.yml
Core/Inc/: main.h
Core/Src/: main.c
Drivers/: CMakeLists.txt
